--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -9,11 +9,13 @@
 
   <ItemGroup>
     <None Remove="1.png" />
+    <None Remove="ava.png" />
     <None Remove="logo.png" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="1.png" />
+    <Resource Include="ava.png" />
     <Resource Include="logo.png" />
   </ItemGroup>
 
