--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -11,6 +11,7 @@
     <None Remove="1.png" />
     <None Remove="ava.png" />
     <None Remove="logo.png" />
+    <None Remove="Oval and +.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +22,7 @@
     <Resource Include="1.png" />
     <Resource Include="ava.png" />
     <Resource Include="logo.png" />
+    <Resource Include="Oval and +.png" />
   </ItemGroup>
 
 </Project>
