--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Todo.Entities\Todo.Entities.csproj" />
   </ItemGroup>
 
